# discordavatarproxy

./: Cargo.toml  Dockerfile  README  flake.nix  rust-toolchain.toml
.github/workflows/: publish.yml
src/: main.rs
